--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
     "name": "@BlueSkyStatistics/PackageManager",
     "productName": "Package Manager",
     "description": "Package manager that does updating of all available packages",
-    "keywords": ["manager", "package", "update"],
+    "keywords": [
+        "manager",
+        "package",
+        "update"
+    ],
     "main": "index.js",
     "version": "1.0.0",
     "author": "aspect13",
     "scripts": {},
-    "dependencies": {},
-    "devDependencies": {},
+    "dependencies": {
+        "axios": "^1.3.4",
+        "electron-store": "^8.1.0",
+        "squirrelly": "7.9.2"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/BlueSkyStatistics/PackageManager.git"
