--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@BlueSkyStatistics/PackageManager",
+    "name": "@BlueSkyStatistics/core-package-manager",
     "productName": "Package Manager",
     "description": "Package manager that does updating of all available packages",
     "keywords": [
@@ -13,12 +13,12 @@
     "scripts": {},
     "dependencies": {
         "axios": "^1.3.4",
-        "electron-store": "^8.1.0",
+        "original-fs": "^1.2.0",
         "squirrelly": "7.9.2"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/BlueSkyStatistics/PackageManager.git"
+        "url": "git+https://github.com/BlueSkyStatistics/core-package-manager.git"
     },
     "license": "AGLPL",
     "bugs": {
