--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dependencies": {
         "axios": "^1.3.4",
         "original-fs": "^1.2.0",
-        "squirrelly": "7.9.2"
+        "squirrelly": "7.9.2",
+        "semver": "^7.3.7"
     },
     "repository": {
         "type": "git",
