--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "scripts": {},
     "dependencies": {
         "axios": "^1.3.4",
-        "original-fs": "^1.2.0",
-        "squirrelly": "7.9.2",
-        "semver": "^7.3.7"
+        "original-fs": "^1.2.0"
     },
     "repository": {
         "type": "git",
