--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "author": "aspect13",
     "scripts": {},
     "dependencies": {
+        "asar": "^3.2.0",
         "axios": "^1.3.4",
         "original-fs": "^1.2.0",
-        "squirrelly": "7.9.2",
-        "semver": "^7.3.7"
+        "semver": "^7.3.7",
+        "squirrelly": "7.9.2"
     },
     "repository": {
         "type": "git",
