--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "asar": "^3.2.0",
         "axios": "^1.3.4",
+        "firebase": "^9.19.1",
         "original-fs": "^1.2.0",
         "semver": "^7.3.7",
         "squirrelly": "7.9.2"
